Добавлена автогенерация клиента + конврерты
