# backend/docs/swagger.json
@@ -119,9 +119,6 @@
                 }
             },
             "delete": {
-                "produces": [
-                    "application/json"
-                ],
                 "tags": [
                     "todos"
                 ],
@@ -136,11 +133,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.MessageResponse"
-                        }
+                    "204": {
+                        "description": "No Content"
                     },
                     "400": {
                         "description": "Bad Request",
@@ -171,14 +165,6 @@
             "type": "object",
             "properties": {
                 "error": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.MessageResponse": {
-            "type": "object",
-            "properties": {
-                "message": {
                     "type": "string"
                 }
             }
