# backend/models/todo.go
@@ -13,7 +13,3 @@ type CreateTodoRequest struct {
 type ErrorResponse struct {
 	Error string `json:"error"`
 }
-
-type MessageResponse struct {
-	Message string `json:"message"`
-}
